# acuity

./: Cargo.toml  LICENSE.md  README.md
src/: app.rs  event_stream.rs  hwmodule.rs  main.rs  sensor.rs  view_state.rs
src/hwmodule/: hwmon.rs  hwmonitor.rs
