[package]
name = "acuity"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"

[dependencies]
async-trait = "0.1.88"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
glob = "0.3.2"
ratatui = "0.30.0-alpha"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]
